--- a/app/src/main/res/layout/activity_galeri.xml
+++ b/app/src/main/res/layout/activity_galeri.xml
@@ -12,7 +12,7 @@
         android:layout_height="100dp"
         android:layout_gravity="start|center"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="420dp"
         android:clickable="true"
         app:cardBackgroundColor="@color/green2"
         app:cardCornerRadius="25dp"
@@ -58,15 +58,16 @@
 
         <ImageView
             android:id="@+id/mPhotoImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             android:src="@drawable/image2"
-            android:layout_marginTop="50dp"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="45dp"
             android:elevation="20dp"
             android:background="@drawable/bg_rounded_rect"
             android:scrollbars="none">
@@ -103,7 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="5dp"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="0dp"
                     app:cardUseCompatPadding="true">
