--- a/app/src/main/res/layout/activity_kamera.xml
+++ b/app/src/main/res/layout/activity_kamera.xml
@@ -7,7 +7,6 @@
     android:background="@color/colorAccent"
     tools:context=".KameraActivity">
 
-
     <com.priyankvasa.android.cameraviewex.CameraView
         android:id="@+id/camera"
         android:layout_width="480dp"
@@ -20,6 +19,7 @@
         app:cameraMode="single_capture"
         app:facing="back"
         app:flash="auto"
+        app:opticalStabilization="true"
         app:outputFormat="jpeg"
         app:pinchToZoom="true"
         app:shutter="short_time"
@@ -31,8 +31,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="start|center"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="500dp"
         android:clickable="true"
         app:cardBackgroundColor="@color/green2"
         app:cardCornerRadius="25dp"
@@ -63,7 +63,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="550dp"
         android:background="@drawable/bg_rounded_rect"
         android:scrollbars="none">
 
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 app:cardBackgroundColor="@color/yellow3"
                 android:layout_marginStart="100dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 app:cardCornerRadius="15dp"
                 app:cardElevation="0dp"
                 app:cardUseCompatPadding="true">
@@ -96,10 +96,6 @@
 
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -116,55 +112,12 @@
                         android:layout_height="wrap_content"
                         android:drawablePadding="10dp"
                         android:padding="8dp"
-                        android:text="Hasil 1"
+                        android:text="Hasil"
                         android:layout_gravity="center"
                         android:textAppearance="@style/CustomtextStyle1"/>
 
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasil2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil 2"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasil3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil 3"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
