--- a/app/src/main/res/layout/fragment_price.xml
+++ b/app/src/main/res/layout/fragment_price.xml
@@ -82,4 +82,10 @@
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <ProgressBar
+        android:id="@+id/progress_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true" />
 </RelativeLayout>
