--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/deskripsi_fragment"
+    android:id="@+id/home_fragment"
     android:background="@android:color/white"
-    tools:context=".ui.deskripsi.DeskripsiFragment">
+    tools:context=".ui.home.HomeFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -82,7 +82,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvListKonten"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="50dp"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
